<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general_title" >
        <SwitchPreference
            android:key="pref_general_force_mic"
            android:title="@string/pref_general_force_mic_title"
            android:summary="@string/pref_general_force_mic_summary"
            android:defaultValue="false"
            android:enabled="false" />
        <com.blefish.ideosx5settings.ListPreferenceSummary
            android:key="pref_general_bt_power"
            android:title="@string/pref_general_bt_power_title"
            android:entries="@array/pref_general_bt_power_entries"
            android:entryValues="@array/pref_general_bt_power_entry_values"
            android:defaultValue="@string/pref_general_bt_power_default_value"
            android:enabled="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_usb_title" >
        <SwitchPreference
            android:key="pref_usb_host"
            android:title="@string/pref_usb_host_title"
            android:summary="@string/pref_usb_host_summary"
            android:defaultValue="false"
            android:enabled="false" />
        <com.blefish.ideosx5settings.ListPreferenceSummary
            android:key="pref_usb_current"
            android:title="@string/pref_usb_current_title"
            android:entries="@array/pref_usb_current_entries"
            android:entryValues="@array/pref_usb_current_entry_values"
            android:defaultValue="@string/pref_usb_current_default_value"
            android:enabled="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_sensors_title" >
        <Preference
            android:key="pref_sensors_mag_calib"
            android:title="@string/pref_sensors_mag_calib_title"
            android:summary="@string/pref_sensors_mag_calib_summary"
            android:enabled="false" />
    </PreferenceCategory>
</PreferenceScreen>